log
Fri, Mar 21, 2025 11:20:36 AM: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:7: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
       push_back(L, elem);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3f6cb15
Fri, Mar 21, 2025 11:21:13 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:7: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
       push_back(L, elem);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
df4186f
Fri, Mar 21, 2025 11:22:15 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
51dce05
